<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Honk Seller</string>
    <string name="facebook_app_id">2096124310637072</string>
    <string name="fb_login_protocol_scheme">fb2096124310637072</string>
    <string name="close">Close</string>
    <string name="featureUnavailableAlertMessage">In order to work, this app needs to access your location. Sadly, looks like your device cannot provide this information, so the app can\'t work properly.</string>
    <string name="alertTitle">Alert</string>
    <string name="offlineAlertMessage">Looks like you are offline! Please check that your device is connected to the phone network.</string>
    <string name="intro">If you are a travelling worker, this app is made just for you.\nTo start, I will ask you to specify your working schedule; only within this schedule, I will share your location with your potential customers, who will be able to see it on a map.\n\nDo you agree?</string>
    <string name="iAgree">Yes, I agree</string>
    <string name="noThanks">No, thanks</string>
    <string name="hello">Hello</string>
    <string name="specifySchedule">Set here your working schedule.</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="haveANiceDay">Have a nice day at work!</string>
    <string name="locationDetectionStarts">From now on, your customers can view your location.</string>
    <string name="selectTime">Select time</string>
    <string name="done">Done</string>
    <string name="workingFrom">work from</string>
    <string name="breakFrom">break from</string>
    <string name="notWorking">not working</string>
    <string name="noBreak">no break</string>
    <string name="scheduleHint">Set your working days and tap on hours to change them.</string>
    <string name="ready">I\'m ready to start!</string>
    <string name="setSchedule">Please set your working schedule to let your customers know your location.</string>
    <string name="stop">Stop</string>
    <string name="serviceStopped">I have stopped the service.</string>
    <string name="stopSendingLocation">Should I stop sending your location?</string>
    <string name="resumeSendingLocation">No, resume sending my location</string>
    <string name="wontWorkToday">Yes, I won\'t work today</string>
    <string name="awayForAWhile">Yes, I\'ll be away for a while</string>
    <string name="yesDoNotSendLocation">Yes, don\'t send my location anymore</string>
    <string name="whenWillYouBeBack">When will you be back?</string>
    <string name="dontKnowYet">I don\'t know</string>
    <string name="whatCanIDo">What can I do for you?</string>
    <string name="imWorking">I\'m working with you right now: your potential customers can currently see your location.</string>
    <string name="imNotWorking">Location detection is currently off: nobody can see your current location right now.</string>
    <string name="scheduleSet">Congratulations! You have successfully set your working schedule.</string>
    <string name="setVacations">I want to set my vacations</string>
    <string name="doNotSendLocation">Don\'t send my location anymore</string>
    <string name="keepRunning">Nothing, keep running!</string>
    <string name="startRunning">Resume sending my location</string>
    <string name="schedulerStarted">From now on, your customers will be able to know your location, according to your work schedule.</string>
    <string name="comeBackToResume">The service was stopped. If you want it to start again, just open the app. See you soon!</string>
    <string name="vacationsSet">Well done: I will suspend the service during your vacation days.</string>
    <string name="goToSetSchedule">Set my working schedule now</string>
    <string name="comeBackSoon">I can\'t work without your permission. If you change your mind, just reopen the app. See you soon!</string>
    <string name="configurationComplete">I\'m ready to start! From now on, I will make your location available during your working hours.</string>
    <string name="congratulations">Congratulations!</string>
    <string name="ok">OK</string>
    <string name="setWorkingSchedule">I want to set my working schedule</string>
    <string name="setTimeAfter">Please choose a time after %s.</string>
    <string name="setTimeBefore">Please choose a time before %s.</string>
    <string name="companyNameRequired">Please set a name for your company</string>
    <string name="companyDetailsSet">The data about your company has been saved</string>
    <string name="login">Log in</string>
    <string name="useSocialAccount">Authenticate through a social account: in this way, you will be able to use this app on different devices, without sharing your personal data.</string>
    <string name="iNeedHelp">I need your help</string>
    <string name="touchToOpenApp">Tap here to open the app</string>
    <string name="somethingWentWrong">Something went wrong</string>
    <string name="retry">Retry</string>
    <string name="loginFailed">Sorry, I couldn\'t log you in. Please check your credentials and try again.</string>
    <string name="setCompanyName">What is the name of your company?</string>
    <string name="theNameOfYourCompany">This is the name that your customers will see whenever you\'re visible on the map.</string>
    <string name="describeWhatYouSell">Briefly describe what you\'re selling</string>
    <string name="writeYourFeedback">Feedback</string>
    <string name="writeHereYourFeedback">Here you can write your suggestions and complaints.</string>
    <string name="sendFeedback">I want to send feedback</string>
    <string name="thanksForFeedback">Thanks for your feedback!</string>
    <string name="sendMail">Choose an app to send an e-mail…</string>
    <string name="noMailClients">Could not find an app for sending e-mails</string>
</resources>